# loan-approval-mlops

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
mlruns/0/: meta.yaml
mlruns/0/897c85de50664c90afd036470fcd7b83/: meta.yaml
mlruns/0/897c85de50664c90afd036470fcd7b83/tags/: mlflow.source.git.commit
mlruns/0/acc450849b424fec91df90836da93e23/: meta.yaml
mlruns/0/acc450849b424fec91df90836da93e23/artifacts/model/: MLmodel  model.pkl  requirements.txt
mlruns/0/acc450849b424fec91df90836da93e23/metrics/: auc
mlruns/0/acc450849b424fec91df90836da93e23/tags/: mlflow.log-model.history  mlflow.source.name
reports/: README.md
src/: Final_Project_loan_approval.ipynb  build_features.py  preprocessing.py  train.py
src/api/: main.py
src/mlruns/0/: meta.yaml
src/mlruns/0/bc4622917dbc4bf5aa081bcab6f91dbd/: meta.yaml
src/mlruns/0/bc4622917dbc4bf5aa081bcab6f91dbd/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
src/mlruns/0/bc4622917dbc4bf5aa081bcab6f91dbd/metrics/: auc
src/mlruns/0/bc4622917dbc4bf5aa081bcab6f91dbd/tags/: mlflow.log-model.history
tests/: conftest.py  test_features.py  test_preprocessing.py  test_train.py
