[project]
name = "loan-approval-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.1",
    "pandas<3",
    "protobuf==3.20.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<81",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
]
